# AMG_match_GPU

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: interpolation.h  mg_builder.h  partitioner.h  sparse.h
src/: interpolation.c  mg_builder.c  partitioner.c  sparse.c  test.c
